# vfm-yolo-distillation

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  TODO.md  pyproject.toml
configs/datasets/: visdrone.yaml  visdrone_10pct.yaml  visdrone_10pct_dinov3_coverage_seed2026.yaml  visdrone_10pct_dinov3_coverage_seed3407.yaml  visdrone_10pct_dinov3_coverage_seed42.yaml  visdrone_10pct_dinov3_hybrid_small_seed2026.yaml  visdrone_10pct_dinov3_hybrid_small_seed3407.yaml  visdrone_10pct_dinov3_hybrid_small_seed42.yaml  visdrone_10pct_small_object_topk_seed42.yaml  visdrone_25pct.yaml  visdrone_50pct.yaml  visdrone_5pct.yaml
configs/experiments/: dinov3_global_distill_visdrone_10pct.yaml  dinov3_objectness_aux_peak_visdrone_10pct_imgsz960_lam002_seed42.yaml  dinov3_objectness_aux_smallcrop_tight_visdrone_10pct_imgsz960_lam002_seed42.yaml  dinov3_objectness_aux_smallcrop_visdrone_10pct_imgsz960_lam002_seed42.yaml  dinov3_objectness_aux_smallgt_visdrone_10pct_imgsz960_lam002_seed42.yaml  dinov3_objectness_aux_smalltile_visdrone_10pct_imgsz960_lam002_l16_l19_seed42.yaml  dinov3_objectness_aux_smalltile_visdrone_10pct_imgsz960_lam002_l19_seed42.yaml  dinov3_objectness_pretrain_visdrone_full_imgsz960.yaml  (+19 more)
scripts/: archive_dinov3_patch_b32.py  audit_dinov3_objectness.py  audit_dinov3_target_alignment.py  baseline_report_data.py  evaluate_area_ap.py  generate_baseline_report.py  prepare_visdrone.py  run_smalltile_iteration.py  select_dinov3_coverage_subset.py  select_dinov3_hybrid_small_subset.py  select_pseudo_small_object_subset.py  select_small_object_subset.py  show_experiment.py  train_dinov3_global_distill.py  train_dinov3_objectness_aux.py  train_dinov3_objectness_aux_multilayer.py  train_dinov3_objectness_pretrain.py  train_dinov3_patch_distill.py  train_dinov3_region_patch_distill.py  train_dinov3_relation_distill.py
tests/: test_config.py  test_dino_coverage_subset.py  test_evaluate_area_ap.py  test_objectness_multilayer.py  test_objectness_targets.py  test_pseudo_small_selection.py  test_relation_distillation.py  test_smalltile_iteration.py  test_teacher_tokens.py
(+14 files in other folders)
